package dominio.servicios;

import java.util.List;

public class Agrupacion {
    private List<Servicio> servicios;
}
