package dominio.servicios;

import java.util.ArrayList;
import java.util.List;

public class RepoServicios {
    private List<Servicio> servicios;

    public List<Servicio> serviciosQueFaltan(List<Servicio> servicios){
        return new ArrayList<>();
    }
}
